<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".aboutUS"
    android:background="#F1E2D2">
    <ImageButton
        android:id="@+id/aboutus_backBtn"
        android:layout_width="?actionBarSize"
        android:layout_height="?actionBarSize"
        android:contentDescription=" "
        android:background="@drawable/back_bttn"
        android:padding="8dp"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp">


            <ImageView
                android:contentDescription=" "
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/nobg_ppl" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textStyle="bold|italic"
                android:textSize="32dp"
                android:text="@string/name"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:fontFamily="casual"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textStyle="normal"
                android:textAlignment="center"
                android:textSize="18dp"
                android:text="@string/aboutUs"
                android:textColor="@color/black"
                android:fontFamily="casual"
                android:scrollbarAlwaysDrawVerticalTrack="true"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:textAlignment="center"
                android:textSize="18dp"
                android:text="@string/line2"
                android:textColor="@color/black"
                android:fontFamily="casual"
                android:layout_margin="5dp"

                />
        </LinearLayout>

    </ScrollView>


</LinearLayout>